--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ div{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     /* gap:0.5em; */
-    border: 1px solid dodgerblue;
+    border: 1px solid rgb(37, 37, 37);
     
 }
 
@@ -59,6 +59,11 @@ div{
     margin:0;
 }
 
+.cell.head{
+
+    background-color: #444;
+    color:#fff
+}
 input#rows{
 
     padding: 0.5em 2em;
