--- a/static/style.css
+++ b/static/style.css
@@ -78,3 +78,11 @@ input#rows{
 .delete_bt:hover {
     background-color: RoyalBlue;
   }
+
+  .error-msg{
+    width:50%;
+    padding: 1em;
+    color:#D8000C;
+    background-color: #FFBABA;
+
+  }
