change framework to Flask

--- a/views/submit.html
+++ b/views/submit.html
@@ -3,7 +3,7 @@
 
 
 <div>
-    % if len(subnet_res)!=0:
+    {% if subnet_res|length !=0 %}
 
         <div class="table">
             <div class="cell head">Subnet Name</div>
@@ -13,7 +13,7 @@
             <div class="cell head">Last Address</div>
             <div class="cell head">Usable</div>
 
-            %for key in subnet_res:
+            {% for key in subnet_res %}
                 <div class="cell">{{key}}</div>
 
                 <div class="cell">{{subnet_res[key]['net_address']}}</div>
@@ -21,18 +21,18 @@
                 <div class="cell">{{subnet_res[key]['first_address']}}</div>
                 <div class="cell">{{subnet_res[key]['last_address']}}</div>
                 <div class="cell">{{subnet_res[key]['usable']}}</div>
-            %end
+            {% endfor %}
         </div>
 
 
-    %else:
-        %if len(err)!=0:
+    {% else %}
+        {% if len(err)!=0 %}
         <div class="error-msg">
             <i class="fa fa-times-circle"></i>
             {{err}}
         </div>
-        %end
-    %end
+        {% endif %}
+    {% endif %}
 </div>
 
 
