--- a/views/index.html
+++ b/views/index.html
@@ -3,12 +3,9 @@
     <head>
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="https://kit.fontawesome.com/cc028eb60f.js" crossorigin="anonymous"></script>
-        <script src="/static/validateIP.js"></script>
-        <script src="/static/js.js"></script>
-        <script src="/static/FileSaver.js"></script>
-        <script src="/static/html-docx.js"></script>
-        
-        <link rel="stylesheet" href="/static/style.css">
+        <script src="{{ url_for('static', filename='validateIP.js') }}"></script>
+        <script src="{{ url_for('static', filename='js.js') }}"></script>   
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     </head>
     <body>
 
@@ -18,7 +15,7 @@
                 <label for="init_network" class="cell head">Initial Network Address</label>
                 <label for="init_slash" class="cell head">Slash Notation</label>
                 <input type="text" class="cell" name="init_network" id="init_network" value="192.168.1.0" required>
-                <input type="number" class="cell" min="1" max="32"  id="init_slash" value="24" required>
+                <input type="number" class="cell" min="1" max="32" id="init_slash" name="init_slash" value="24" required>
 
             </div>
 
