--- a/static/style.css
+++ b/static/style.css
@@ -87,3 +87,18 @@ input#rows{
 
   }
 
+/* For small devices (up to 600px) */
+@media (max-width: 600px) {
+    /* Adjust styles here */
+  }
+  
+  /* For medium devices (601px to 992px) */
+@media (min-width: 601px) and (max-width: 992px) {
+    /* Adjust styles here */
+  }
+  
+  /* For large devices (993px and above) */
+@media (min-width: 993px) {
+    /* Adjust styles here */
+  }
+  
