--- a/templates/quiz_index.html
+++ b/templates/quiz_index.html
@@ -3,14 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <script src="https://kit.fontawesome.com/cc028eb60f.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
     </head>
     <body>
         <div class="container">
-            <div>Title</div>
+            <div class="title">CCNA Mock Test</div>
             <div class="level-container">
                 <div class="level">
-                    <div class="level-icon"></div>
-                    <div class="level-image"></div>
+                    <div class="level-icon">
+                        <i class="fa-light fa-paper-plane fa-lg"></i>
+                    </div>
+                    <div class="level-image">
+                        <img src="{{ url_for('static', filename='education.png')}}">
+                    </div>
                     <div class="level-content">
                         <div class="level-title">Level 1</div>
                         <div class="level-text">Newbie</div>
@@ -18,8 +25,12 @@
                     
                 </div>
                 <div class="level">
-                    <div class="level-icon"></div>
-                    <div class="level-image"></div>
+                    <div class="level-icon">
+                        <i class="fa-light fa-key fa-lg"></i>
+                    </div>
+                    <div class="level-image">
+                        <img src="{{ url_for('static', filename='career.png')}}">
+                    </div>
                     <div class="level-content">
                         <div class="level-title">Level 2</div>
                         <div class="level-text">Intermediate</div>
@@ -27,8 +38,12 @@
                     
                 </div>
                 <div class="level">
-                    <div class="level-icon"></div>
-                    <div class="level-image"></div>
+                    <div class="level-icon">
+                        <i class="fa-light fa-code fa-lg"></i>
+                    </div>
+                    <div class="level-image">
+                        <img src="{{ url_for('static', filename='rating.png')}}">
+                    </div>
                     <div class="level-content">
                         <div class="level-title">Level 3</div>
                         <div class="level-text">Advanced</div>
@@ -37,5 +52,6 @@
                 </div>
             </div>
         </div>
+        <i class="fa-light fa-code fa-lg"></i> 
     </body>
 </html>
