--- a/templates/quiz_index.html
+++ b/templates/quiz_index.html
@@ -13,7 +13,7 @@
             <div class="level-container">
                 <div class="level">
                     <div class="level-icon">
-                        <i class="fa-light fa-paper-plane fa-lg"></i>
+                        <img src="{{ url_for('static', filename='graduation-cap.png')}}">
                     </div>
                     <div class="level-image">
                         <img src="{{ url_for('static', filename='education.png')}}">
@@ -26,7 +26,7 @@
                 </div>
                 <div class="level">
                     <div class="level-icon">
-                        <i class="fa-light fa-key fa-lg"></i>
+                        <img src="{{ url_for('static', filename='id-card.png')}}">
                     </div>
                     <div class="level-image">
                         <img src="{{ url_for('static', filename='career.png')}}">
@@ -39,7 +39,7 @@
                 </div>
                 <div class="level">
                     <div class="level-icon">
-                        <i class="fa-light fa-code fa-lg"></i>
+                        <img src="{{ url_for('static', filename='certificate.png')}}">
                     </div>
                     <div class="level-image">
                         <img src="{{ url_for('static', filename='rating.png')}}">
@@ -52,6 +52,6 @@
                 </div>
             </div>
         </div>
-        <i class="fa-light fa-code fa-lg"></i> 
+ 
     </body>
 </html>
