add click event send post

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
+        <script src="{{ url_for('static', filename='js.js') }}"></script> 
     </head>
     <body>
         <div class="q_container">
@@ -19,6 +21,7 @@
             </div>
 
         </div>
+        <div class="result"></div>
     </body>
 </html>
 
