--- a/templates/checkanswer.html
+++ b/templates/checkanswer.html
@@ -1,5 +1,7 @@
 
-<div class="q_title">
+<div class="answer_title">
     <div class="q_num">Answer</div>
     <div class="question">{{answer}}</div>
+    
 </div>
+<a class="nextpage" href="#">&#8250;</a>
